--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
 			</li>
 		</ul>
 	</main>
-	<p style="text-align: center;">Website Made By Arnav Dharmesh Kharwar.</p>
+	<p style="text-align: center;">Website Made By Arnav D Kharwar.</p>
 	<footer>
 		<p>&copy; 2023 Dharmesh K Advisory. All rights reserved.</p>
 	</footer>
