--- a/404.html
+++ b/404.html
@@ -21,7 +21,7 @@
 	</header>
 	
 	<main>
-		<h1>Uh oh. Something does'nt seem right.</h1>
+		<h1>Oops! The page you're looking for isn't here. Please check the URL or try again later.</h1>
 		<p>Error 404</p>
 		<a href="index.html" class="button">To Home Page</a>
 	</main>
